--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <table class='numOper'>
       <tr id='FisrtRwo'> 
         <td>
-          <input type="text" id='inputVal' >
+          <input type="text" id='inputVal' style="font-size:20px" placeholder='CASIO'>
         </td>
       </tr>
          <tr id='operatorRow'> 
@@ -56,7 +56,7 @@
         <td>
         <button class='btn' id='Dot'   onclick="insrt('.')">.</button>
         <button class='btn' id='Zero'  onclick="insrt(0)">0</button>
-        <button class='btn' id='Equal' onclick="eql('=')">=</button>
+        <button class='btn' id='Equal' onclick="eql('=')" >=</button>
         <button class='btn' id='div'   onclick="insrt('/')">/</button>
         </td>
       </tr>
